test_reader.log
warning: unused variable: `position_size`
   --> src\core\runtime.rs:408:45
    |
408 | ...                   let position_size = executor.get_default_quantity();
    |                           ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_position_size`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `hft_bot` (lib) generated 1 warning (run `cargo fix --lib -p hft_bot` to apply 1 suggestion)
warning: unused import: `super::*`
  --> src\core\channels.rs:45:9
   |
45 |     use super::*;
   |         ^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Orderbook`
    --> src\core\execution.rs:1031:47
     |
1031 |     use crate::adapters::types::{OrderStatus, Orderbook};
     |                                               ^^^^^^^^^

warning: unused import: `AtomicU64`
    --> src\core\execution.rs:1032:29
     |
1032 |     use std::sync::atomic::{AtomicU64, Ordering};
     |                             ^^^^^^^^^

warning: unused import: `std::sync::Arc`
    --> src\core\execution.rs:1033:9
     |
1033 |     use std::sync::Arc;
     |         ^^^^^^^^^^^^^^

   Compiling hft_bot v0.1.0 (C:\Users\jules\Documents\bot4\bot)
warning: `hft_bot` (lib test) generated 5 warnings (1 duplicate) (run `cargo fix --lib -p hft_bot --tests` to apply 4 suggestions)
error[E0407]: method `get_order` is not a member of trait `ExchangeAdapter`
   --> tests\full_cycle.rs:171:5
    |
171 | /     async fn get_order(&self, order_id: &str) -> ExchangeResult<OrderResponse> {
172 | |         Ok(OrderResponse {
173 | |             order_id: order_id.to_string(),
174 | |             client_order_id: String::new(),
...   |
178 | |         })
179 | |     }
    | |_____^ not a member of trait `ExchangeAdapter`

error[E0407]: method `get_fills` is not a member of trait `ExchangeAdapter`
   --> tests\full_cycle.rs:181:5
    |
181 | /     async fn get_fills(&self, _order_id: &str, _symbol: &str) -> ExchangeResult<Vec<FillInfo>> {
182 | |         Ok(vec![FillInfo {
183 | |             fill_price: 42000.0,
184 | |             filled_quantity: 0.1,
...   |
187 | |         }])
188 | |     }
    | |_____^ not a member of trait `ExchangeAdapter`

error[E0560]: struct `FillInfo` has no field named `filled_quantity`
   --> tests\full_cycle.rs:184:13
    |
184 |             filled_quantity: 0.1,
    |             ^^^^^^^^^^^^^^^ `FillInfo` does not have this field
    |
    = note: all struct fields are already assigned

Some errors have detailed explanations: E0407, E0560.
For more information about an error, try `rustc --explain E0407`.
error: could not compile `hft_bot` (test "full_cycle") due to 3 previous errors
